src/test/resources/expected/test-exception-16.kore.golden
Parse error: ../../../test/resources//test-exception-16.kore:6:8:
  |
6 |     #X:S []
  |        ^
unexpected 'S'
expecting '#'
